[gd_scene load_steps=12 format=3 uid="uid://dastepnp8bonv"]

[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_4l5vr"]
[ext_resource type="Texture2D" uid="uid://bwghnm70atggy" path="res://addons/Tiny Swords (Update 010)/UI/Banners/Banner_Horizontal.png" id="1_7prk5"]
[ext_resource type="Texture2D" uid="uid://de2laowefmkjq" path="res://addons/Tiny Swords (Update 010)/Resources/Resources/G_Idle_(NoShadow).png" id="3_pvji3"]
[ext_resource type="Texture2D" uid="uid://vrr7yoxq2blm" path="res://addons/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="4_7so1o"]

[sub_resource type="SystemFont" id="SystemFont_hl24u"]
font_names = PackedStringArray("IBM Plex Sans")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_1lcby"]
font = SubResource("SystemFont_hl24u")
font_size = 32
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ari3k"]
texture = ExtResource("1_7prk5")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 45.7778
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_ig8xn"]
font_names = PackedStringArray("IBM Plex Sans")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_latje"]
font = SubResource("SystemFont_ig8xn")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwnue"]
atlas = ExtResource("3_pvji3")
region = Rect2(40, 48, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_oreso"]
atlas = ExtResource("4_7so1o")
region = Rect2(256, 128, 128, 128)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_4l5vr")

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.5
offset_top = 44.0
offset_right = 42.5
offset_bottom = 86.0
grow_horizontal = 2
text = "08:50"
label_settings = SubResource("LabelSettings_1lcby")
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -352.0
offset_top = 28.0
offset_right = -27.0
offset_bottom = 117.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ari3k")

[node name="GoldLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -108.0
offset_top = 6.0
offset_right = -21.0
offset_bottom = 51.0
grow_horizontal = 0
text = "50"
label_settings = SubResource("LabelSettings_latje")

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 160.0
offset_top = 4.0
offset_right = 288.0
offset_bottom = 132.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_lwnue")

[node name="DeadLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -235.0
offset_top = 6.0
offset_right = -151.0
offset_bottom = 51.0
grow_horizontal = 0
text = "50"
label_settings = SubResource("LabelSettings_latje")

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_top = -41.0
offset_right = 283.0
offset_bottom = 242.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_oreso")
